--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.0.3",
     "@tsconfig/svelte": "^3.0.0",
+    "@types/node": "^18.15.11",
     "littlejsengine": "^1.4.0",
     "svelte": "^3.55.1",
     "svelte-check": "^2.10.3",
