--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tsconfig/svelte": "^3.0.0",
     "@types/node": "^18.15.11",
     "littlejsengine": "^1.4.0",
+    "rollup-plugin-svelte-svg": "^1.0.0-beta.6",
     "svelte": "^3.55.1",
     "svelte-check": "^2.10.3",
     "tslib": "^2.5.0",
